--- a/src/styles/includes/_stage.scss
+++ b/src/styles/includes/_stage.scss
@@ -1,11 +1,15 @@
 @import "../core/variables";
+@import "../core/mixins";
 
 .stage {
-	margin: 0;
-	background: $color-primary--black;
+	@include responsive-spacing(margin-bottom, $spacing--900, $spacing--900--tablet, $spacing--900--desktop, $spacing--900--desktop-xl);
+
+	background-color: $color-primary--black;
 	color: $color-primary--white;
-	height: 90vh;
+	height: 100vh;
 	position: relative;
+	overflow: hidden;
+	margin: 0;
 
 	&__headline {
 		@include bp-xs() {
@@ -18,18 +22,51 @@
 		}
 	}
 
-	&__title,
-	&__video {
+	&__subheadline {
+		@include subheadline-100();
+
+		@include responsive-spacing(margin-bottom, $spacing--500, $spacing--500--tablet, $spacing--500--desktop, $spacing--500--desktop-xl);
+	}
+
+	&__background {
+		position: absolute;
+		object-fit: cover;
+		width: 100%;
+		height: 100%;
+	}
+
+	&__gradient {
+		background: linear-gradient(180deg, $color-primary--black, $color-primary--white);
+		height: 9.5rem;
+		width: 100vw;
+		position: absolute;
+		top: 0;
+		mix-blend-mode: multiply;
+		opacity: 0.1;
+		z-index: 10;
+	}
+
+	&__title {
 		margin: auto;
 		position: relative;
 		width: 100%;
-		@include bp-xs() {
-			margin: 0;
+
+		&--with-video {
+			@include bp-xs() {
+				margin: 0;
+			}
 		}
 	}
 
 	&__video {
+		margin: auto;
+		position: relative;
+		width: 100%;
 		overflow: hidden;
+
+		@include bp-xs() {
+			margin: 0;
+		}
 
 		&__item {
 			width: 90%;
@@ -55,25 +92,24 @@
 
 	&__overlap {
 		background-color: $color-primary--white;
-		bottom: -16rem;
-		height: 24rem;
 		position: absolute;
-		width: 100%;
 		z-index: 4;
 
-		@include bp-xs() {
-			bottom: -10rem;
-			height: 15rem;
+		&--bottom {
+			width: 100%;
+			height: $spacing--200;
+			bottom: 0;
 		}
 
-		@include bp-s() {
-			bottom: -10rem;
-			height: 16rem;
-		}
+		&--left {
+			width: $spacing--200;
+			height: 50%;
+			left: 0;
+			bottom: 0;
 
-		@include bp-m() {
-			bottom: -10rem;
-			height: 18rem;
+			@include bp-xs {
+				display: none;
+			}
 		}
 
 		.is-dark & {
